--- a/.github/workflows/continuous-builds.yml
+++ b/.github/workflows/continuous-builds.yml
@@ -58,10 +58,12 @@ jobs:
           git config --global --add safe.directory $PWD
           git fetch --prune --unshallow
           sudo python3.11 -m pip install .
+      - name: Show version
       - name: Build AppImage
         run: |
           cd recipes/appimage-builder
           export APPIMAGE_BUILDER_VERSION=$(appimage-builder --version | head -1 | cut -f 2 -d" ")
+          appimage-builder --version
           appimage-builder --skip-test
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2.1.4
