--- a/.github/workflows/continuous-builds.yml
+++ b/.github/workflows/continuous-builds.yml
@@ -45,7 +45,6 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: [ pytest-ubuntu-focal, pytest-archlinux ]
     steps:
       - name: Install dependencies
         run: |
@@ -58,7 +57,11 @@ jobs:
           git config --global --add safe.directory $PWD
           git fetch --prune --unshallow
           sudo python3.11 -m pip install .
+
       - name: Show version
+        run: |
+          appimage-builder --version
+
       - name: Build AppImage
         run: |
           cd recipes/appimage-builder
